objects/maps__MapsSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>maps__Date__c</fullName>
        <description>Used for Visualforce Pages</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Value3__c</fullName>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Setting</label>
</CustomObject>